# TempoTech

./: .gitignore  .pylintrc  JUSTIFICATIVAS.md  README.md  pyproject.toml
database/: db.sql  tempo-tech.dbm
docker/: Dockerfile  docker-compose.yml
docker/redis/: redis.conf
tempotech/api/: main.py
tempotech/api/router/: location_router.py  weather_router.py
tempotech/core/: config.py
tempotech/core/database/models/: location_model.py  weather_location_model.py  weather_model.py
tempotech/core/database/repository/: __init__.py  connection_repository.py  location_repository.py
tempotech/core/database/repository/postgres/: connection_repository.py  location_repository.py
tempotech/core/interfaces/: database_repository.py  location_provider.py  use_case.py  weather_provider.py
tempotech/core/providers/: __init__.py  ibge_provider.py  open_weather_provider.py
tempotech/core/schemas/: location_schema.py  pagination_schema.py  weather_schema.py
tempotech/core/use_case/: create_location_use_case.py  search_city_use_case.py  search_state_use_case.py
tests/integration/core/use_case/: test_search_city_use_case_integration.py
tests/unit/core/schemas/: test_location_schema_unit.py  test_pagination_schema_unit.py  test_weather_schema_unit.py
